tests/__snapshots__/validation-omit-stderr.snap.txt
Error: Expected at least 2 arguments, but got 0. ts(2555)

  3 | describe("argument for 'object'", () => {
  4 |   test("must be provided", () => {
  5 |     omit();
    |     ~~~~
  6 |   });
  7 | });
  8 | 

      at ./__typetests__/omit.tst.ts:5:5

    An argument for 'object' was not provided. ts(6210)

      310 |  * Reshapes type of the given object by removing the specified keys.
      311 |  */
      312 | declare function omit<T, K extends PropertyKey>(object: T, ...keys: [K, ...Array<K>]): Omit<T, K>;
          |                                                 ~~~~~~~~~
      313 | /**
      314 |  * Reshapes type of the given object by keeping only the specified keys.
      315 |  */

            at ./../../../build/index.d.ts:312:49

Error: Expected at least 2 arguments, but got 1. ts(2555)

   9 | describe("argument for 'keys'", () => {
  10 |   test("must be provided", () => {
  11 |     omit({ a: "test" });
     |     ~~~~
  12 |   });
  13 | });
  14 | 

       at ./__typetests__/omit.tst.ts:11:5

    Arguments for the rest parameter 'keys' were not provided. ts(6236)

      310 |  * Reshapes type of the given object by removing the specified keys.
      311 |  */
      312 | declare function omit<T, K extends PropertyKey>(object: T, ...keys: [K, ...Array<K>]): Omit<T, K>;
          |                                                            ~~~~~~~~~~~~~~~~~~~~~~~~~
      313 | /**
      314 |  * Reshapes type of the given object by keeping only the specified keys.
      315 |  */

            at ./../../../build/index.d.ts:312:60

